--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,7 @@ a {
   background-color: #fff;
   width: 100px;
   padding: 2px;
+  display: none;
 }
 
 .noticias {
@@ -486,6 +487,7 @@ a {
     text-align: center;
     padding: 5px;
     margin-top: -30px;
+    display: block;
   }
 
   .saberMas span {
